--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <h2>Sobre Nosotros</h2>
         <br>
         <p class="sobreNosotros">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque debitis minima exercitationem, expedita, ipsa repellendus harum vel distinctio veniam libero beatae repudiandae ducimus assumenda quibusdam vitae quisquam tempore cumque dolorum aperiam blanditiis quaerat autem temporibus? Sunt harum nisi veritatis quae nobis voluptatem quibusdam saepe ipsa autem et eveniet sit quasi enim nulla rem corrupti voluptas minus sapiente fugit voluptatibus excepturi, odit cupiditate hic. Delectus id repellendus perferendis at, est ipsa illum impedit placeat corrupti eveniet dolorem in officiis?</p>
-
-
+        <br>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius vero provident natus perferendis quaerat incidunt quis amet doloremque eaque nisi libero in quasi mollitia ad quisquam dicta, cum minus! Hic.</p>
 
     </main>
 
