--- a/index.html
+++ b/index.html
@@ -10,51 +10,105 @@
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
 </head>
 
 <body>
 
     <header>
-        <nav class="limiteMenu">
-            <ul class="menuNav">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="menu.html">Menú</a></li>
-            </ul>
 
-            <img src="img/gorilas logo .png" alt="logo empresa">
+        <!-- NAVBAR -->
 
-            <ul class="menuNav">
-                <li><a href="carrito.html">Carrito</a></li>
-                <li><a href="contacto.html">Contactanos</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg colorFondo">
+
+            <a href="index.html"><img src="img/gorilas logo .png" alt="logo empresa" class="logo"></a>
+
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">Inicio</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="menu.html">Menú</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="carrito.html">Carrito</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">Contactanos</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
+          <!-- NAVBAR -->
+
     </header>
 
 
 
     <main>
-        <h1 class="gorilas">Gorilas</h1>
+        <h1 class="color">Gorilas</h1>
         <br>
-        <h2>Sobre Nosotros</h2>
+        <h2 class="color">Sobre Nosotros</h2>
+        
+        <p class="sobreNosotros color">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque debitis minima exercitationem, expedita, ipsa repellendus harum vel distinctio veniam libero beatae repudiandae ducimus assumenda quibusdam vitae quisquam tempore cumque dolorum aperiam blanditiis quaerat autem temporibus? Sunt harum nisi veritatis quae nobis voluptatem quibusdam saepe ipsa autem et eveniet sit quasi enim nulla rem corrupti voluptas minus sapiente fugit voluptatibus excepturi, odit cupiditate hic. Delectus id repellendus perferendis at, est ipsa illum impedit placeat corrupti eveniet dolorem in officiis?</p>
+
+        <!-- CAROUSEL -->
+
+        <div id="carouselExampleFade" class="carousel slide carousel-fade carousel" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/team.PNG" class="d-block w-100" alt="imagen del equipo">
+              </div>
+              <div class="carousel-item">
+                <img src="img/gorilas logo .png" class="d-block w-100" alt="logo de la empresa">
+              </div>
+              <div class="carousel-item">
+                <img src="img/foto hamburguesa ejemplo.PNG" class="d-block w-100" alt="foto hamburguesa ejemplo">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <!-- CAROUSEL -->
+
         <br>
-        <p class="sobreNosotros">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque debitis minima exercitationem, expedita, ipsa repellendus harum vel distinctio veniam libero beatae repudiandae ducimus assumenda quibusdam vitae quisquam tempore cumque dolorum aperiam blanditiis quaerat autem temporibus? Sunt harum nisi veritatis quae nobis voluptatem quibusdam saepe ipsa autem et eveniet sit quasi enim nulla rem corrupti voluptas minus sapiente fugit voluptatibus excepturi, odit cupiditate hic. Delectus id repellendus perferendis at, est ipsa illum impedit placeat corrupti eveniet dolorem in officiis?</p>
+        <p class="color">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius vero provident natus perferendis quaerat incidunt quis amet doloremque eaque nisi libero in quasi mollitia ad quisquam dicta, cum minus! Hic.</p>
         <br>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius vero provident natus perferendis quaerat incidunt quis amet doloremque eaque nisi libero in quasi mollitia ad quisquam dicta, cum minus! Hic.</p>
+    
 
     </main>
 
     <footer>
-        <div>
-            <div class="contactoFooter">
-                <a href="https://www.instagram.com/gorilas.tm/" target="_blank">Instagram</a>
-                <a href="https://twitter.com/coderhouse" target="_blank">Twitter</a>
-                <a href="contacto.html">Contactanos</a>
-            </div>
-        </div>
+
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="https://www.instagram.com/gorilas.tm/" target="_blank">Instagram</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://twitter.com/coderhouse" target="_blank">Twitter</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contactanos</a>
+            </li>
+        </ul>
+
     </footer>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
