--- a/carrito.html
+++ b/carrito.html
@@ -50,15 +50,18 @@
 
 
     <main>
-        <h1 class="gorilas">Gorilas</h1>
+        
+        <h2 class="color">Su Pedidio</h2>
         <br>
-        <h2>Su Pedidio</h2>
+        <div>
+            <div>
+
+            </div>
+        </div>
         <br>
-        <div></div>
+        <h2 class="color">Total = $x</h2>
         <br>
-        <h2>Total = $x</h2>
-        <br>
-        <h2><a href="pago.html">Confirmar</a></h2>
+        <h2><a href="pago.html" class="color">Confirmar</a></h2>
 
 
     </main>
