--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -53,19 +53,24 @@
         <h1 class="gorilas">Gorilas</h1>
         
         <form>
-            <label for="">Nombre y Apellido</label>
-            <br>
-            <input type="text">
-            <br>
-            <label for="">Mail</label>
-            <br>
-            <input type="text">
-            <br>
-            <label for="">Mensaje</label>
-            <br>
-            <input type="text">
-            <br>
-            <input type="submit">
+            <div class="mb-3">
+                <label for="" class="form-label color">Nombre y Apellido</label>
+                <input type="text" class="form-control">
+            </div>
+
+            <!-- FORM -->
+
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label color">Mail </label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label color">Mensaje</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+
+                <input type="submit">
+            </div>
+
         </form>
 
 
