--- a/index.html
+++ b/index.html
@@ -24,25 +24,28 @@
             <a href="index.html"><img src="img/gorilas logo .png" alt="logo empresa" class="logo"></a>
 
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">Inicio</a>
+              <a class="navbar-brand" href="index.html">Gorilas</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="menu.html">Menú</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="carrito.html">Carrito</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contactanos</a>
-                  </li>
-                </ul>
-              </div>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="menu.html">Menú</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="carrito.html">Carrito</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="contacto.html">Contactanos</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </nav>
+        </nav>
 
           <!-- NAVBAR -->
 
@@ -51,11 +54,10 @@
 
 
     <main>
-        <h1 class="color">Gorilas</h1>
-        <br>
-        <h2 class="color">Sobre Nosotros</h2>
         
-        <p class="sobreNosotros color">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque debitis minima exercitationem, expedita, ipsa repellendus harum vel distinctio veniam libero beatae repudiandae ducimus assumenda quibusdam vitae quisquam tempore cumque dolorum aperiam blanditiis quaerat autem temporibus? Sunt harum nisi veritatis quae nobis voluptatem quibusdam saepe ipsa autem et eveniet sit quasi enim nulla rem corrupti voluptas minus sapiente fugit voluptatibus excepturi, odit cupiditate hic. Delectus id repellendus perferendis at, est ipsa illum impedit placeat corrupti eveniet dolorem in officiis?</p>
+        <h2 class="color">Sobre Nosotros</h2>
+
+        <p class="sobreNosotros color container-fluid">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque debitis minima exercitationem, expedita, ipsa repellendus harum vel distinctio veniam libero beatae repudiandae ducimus assumenda quibusdam vitae quisquam tempore cumque dolorum aperiam blanditiis quaerat autem temporibus? Sunt harum nisi veritatis quae nobis voluptatem quibusdam saepe ipsa autem et eveniet sit quasi enim nulla rem corrupti voluptas minus sapiente fugit voluptatibus excepturi, odit cupiditate hic. Delectus id repellendus perferendis at, est ipsa illum impedit placeat corrupti eveniet dolorem in officiis?</p>
 
         <!-- CAROUSEL -->
 
