--- a/carrito.html
+++ b/carrito.html
@@ -14,38 +14,41 @@
 
 <body>
 
-    <header>
-       
-        <!-- NAVBAR -->
+  <header>
 
-        <nav class="navbar navbar-expand-lg colorFondo">
+    <!-- NAVBAR -->
 
-            <a href="index.html"><img src="img/gorilas logo .png" alt="logo empresa" class="logo"></a>
+    <nav class="navbar navbar-expand-lg colorFondo">
 
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">Inicio</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
+        <a href="index.html"><img src="img/gorilas logo .png" alt="logo empresa" class="logo"></a>
+
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">Gorilas</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="menu.html">Menú</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="carrito.html">Carrito</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contactanos</a>
-                  </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="menu.html">Menú</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="carrito.html">Carrito</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="contacto.html">Contactanos</a>
+                    </li>
                 </ul>
-              </div>
             </div>
-          </nav>
+        </div>
+    </nav>
 
-          <!-- NAVBAR -->
+      <!-- NAVBAR -->
 
-    </header>
+</header>
 
 
 
