--- a/pago.html
+++ b/pago.html
@@ -10,17 +10,21 @@
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+    <!-- bootstrap iconos -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+
 </head>
 
 <!-- ESTA ES UNA PAGNIA QUE SOLO Se ACCEDE DESDE EL CARRITO -->
 
-<body>
+<body class="container-fluid">
 
-  <header>
+  <header class="encabezado">
 
     <!-- NAVBAR -->
 
-    <nav class="navbar navbar-expand-lg colorFondo">
+    <nav class="navbar navbar-expand-lg navbar-dark">
 
         <a href="index.html"><img src="img/gorilas logo .png" alt="logo empresa" class="logo"></a>
 
