--- a/index.html
+++ b/index.html
@@ -1,152 +1,148 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GorilasTM</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/gorilas logo .png" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GorilasTM</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="img/gorilas logo .png" type="image/x-icon">
 
-    <!-- AOS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- AOS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-    <!-- bootstrap iconos -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+  <!-- bootstrap iconos -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
 </head>
 
 <body class="container-fluid">
 
-    <header class="encabezado">
+  <header class="encabezado">
 
-        <!-- NAVBAR -->
+    <!-- NAVBAR -->
 
-        <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
 
-            <a href="index.html"><img src="img/gorilas logo .png" alt="logo empresa" class="logo"></a>
+      <a href="index.html"><img src="img/gorilas logo .png" alt="logo empresa" class="logo"></a>
 
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">Gorilas</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="menu.html">Menú</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="carrito.html">Carrito</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="contacto.html">Contactanos</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-          <!-- NAVBAR -->
-
-    </header>
-
-
-
-    <main>
-
-      <div>
-
-        <h2 class="color">Sobre Nosotros</h2>
-
-        <div class="sobreNosotros ">
-            <p class="color">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque debitis minima exercitationem, expedita, ipsa repellendus harum vel distinctio veniam libero beatae repudiandae ducimus assumenda quibusdam vitae quisquam tempore cumque dolorum aperiam blanditiis quaerat autem temporibus? Sunt harum nisi veritatis quae nobis voluptatem quibusdam saepe ipsa autem et eveniet sit quasi enim nulla rem corrupti voluptas minus sapiente fugit voluptatibus excepturi, odit cupiditate hic. Delectus id repellendus perferendis at, est ipsa illum impedit placeat corrupti eveniet dolorem in officiis?</p>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Gorilas</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="menu.html">Menú</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="carrito.html">Carrito</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="contacto.html">Contactanos</a>
+            </li>
+          </ul>
         </div>
-  
-        <!-- CAROUSEL -->
-  
-        <div id="carouselExampleFade" class="carousel slide carousel-fade carousel" data-bs-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="img/team.PNG" class="d-block w-100" alt="imagen del equipo">
-                </div>
-                <div class="carousel-item">
-                  <img src="img/gorilas logo .png" class="d-block w-100" alt="logo de la empresa">
-                </div>
-                <div class="carousel-item">
-                  <img src="img/foto hamburguesa ejemplo.PNG" class="d-block w-100" alt="foto hamburguesa ejemplo">
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-        </div>
-  
-        <!-- CAROUSEL -->
-  
-          <br>
-          <p class="color">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius vero provident natus perferendis quaerat incidunt quis amet doloremque eaque nisi libero in quasi mollitia ad quisquam dicta, cum minus! Hic.</p>
-          <br>
-          <br>
-          <div>
-            <p class="color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam a inventore beatae corporis vitae adipisci dolorum quis ab vel amet tempora aliquid, nam, nulla debitis sequi vero dolorem modi velit?</p>
-          </div>
-  
-          <br>
-  
-          <div data-aos="zoom-out-up" class="animacionDos">
-            <p class="color">Pasate por nuestar Redes!!!</p>
-  
-          </div>
-          <br>
-          <br>
-          <br>
-          <br>
-      
+      </div>
+    </nav>
 
+    <!-- NAVBAR -->
+
+  </header>
+
+
+
+  <main>
+
+    <section>
+
+      <h1>Sobre Nosotros</h1>
+
+      <div class="sobreNosotros">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque debitis minima exercitationem,
+          expedita, ipsa repellendus harum vel distinctio veniam libero beatae repudiandae ducimus assumenda quibusdam
+          vitae quisquam tempore cumque dolorum aperiam blanditiis quaerat autem temporibus? Sunt harum nisi veritatis
+          quae nobis voluptatem quibusdam saepe ipsa autem et eveniet sit quasi enim nulla rem corrupti voluptas minus
+          sapiente fugit voluptatibus excepturi, odit cupiditate hic. Delectus id repellendus perferendis at, est ipsa
+          illum impedit placeat corrupti eveniet dolorem in officiis?</p>
       </div>
 
-    </main>
+      <!-- CAROUSEL -->
 
-    <footer>
+      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/team.PNG" class="d-block w-100 img" alt="imagen del equipo">
+          </div>
+          <div class="carousel-item">
+            <img src="img/gorilas logo .png" class="d-block w-100 img" alt="logo de la empresa">
+          </div>
+          <div class="carousel-item">
+            <img src="img/foto hamburguesa ejemplo.PNG" class="d-block w-100 img" alt="foto hamburguesa ejemplo">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
 
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="https://www.instagram.com/gorilas.tm/" target="_blank">Instagram</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://twitter.com/coderhouse" target="_blank">Twitter</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contacto.html">Contactanos</a>
-            </li>
-        </ul>
+      <!-- CAROUSEL -->
 
-    </footer>
+      <div data-aos="zoom-out-up" class="animacionDos">
+        <p>Pasate por nuestar Redes!!!</p>
+
+      </div>
+ 
+    </section>
+
+  </main>
+
+  <footer>
+
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="https://www.instagram.com/gorilas.tm/"
+          target="_blank"> <i class="bi bi-instagram"></i> Instagram</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://twitter.com/coderhouse" target="_blank"> <i class="bi bi-twitter"></i> Twitter</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contacto.html">Contactanos</a>
+      </li>
+    </ul>
+
+  </footer>
 
 
-    
 
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
-    <!-- AOS -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 
-    <script>
-      AOS.init();
-    </script>
+  <!-- AOS -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+  <script>
+    AOS.init();
+  </script>
 
 </body>
 
