--- a/menu.html
+++ b/menu.html
@@ -72,102 +72,89 @@
 
         <div class="col-xl-6 col-md-6 col-sm-12 opcionMenu">
           <div>
-            <h3>nombreHamburguesa</h3>
-            <p>descripcionHamburguesa</p>
-            <img src="img/foto hamburguesa ejemplo.PNG" alt="foto hamburguesa ejemplo" class="hamburguesasMenu">
+            <div class="flexPadre">
+              <h3>nombreHamburguesa</h3>
+              <p>descripcionHamburguesa</p>
+            </div>
+            <div class="fotoFlex">
+              <i class="bi bi-cart-plus cart"></i>
+              <img src="img/foto hamburguesa ejemplo.PNG" alt="foto hamburguesa ejemplo" class="hamburguesasMenu">
+            </div>
           </div>
         </div>
 
         <div class="col-xl-6 col-md-6 col-sm-12 opcionMenu">
           <div>
-            <h3>nombreHamburguesa</h3>
-            <p>descripcionHamburguesa</p>
-            <img src="img/foto hamburguesa ejemplo.PNG" alt="foto hamburguesa ejemplo" class="hamburguesasMenu">
+            <div class="flexPadre">
+              <h3>nombreHamburguesa</h3>
+              <p>descripcionHamburguesa</p>
+            </div>
+            <div class="fotoFlex">
+              <i class="bi bi-cart-plus cart"></i>
+              <img src="img/foto hamburguesa ejemplo.PNG" alt="foto hamburguesa ejemplo" class="hamburguesasMenu">
+            </div>
           </div>
         </div>
-
       </div>
 
       <div class="row">
 
         <div class="col-xl-6 col-md-6 col-sm-12 opcionMenu">
           <div>
-            <h3>nombreHamburguesa</h3>
-            <p>descripcionHamburguesa</p>
-            <img src="img/foto hamburguesa ejemplo.PNG" alt="foto hamburguesa ejemplo" class="hamburguesasMenu">
+            <div class="flexPadre">
+              <h3>nombreHamburguesa</h3>
+              <p>descripcionHamburguesa</p>
+            </div>
+            <div class="fotoFlex">
+              <i class="bi bi-cart-plus cart"></i>
+              <img src="img/foto hamburguesa ejemplo.PNG" alt="foto hamburguesa ejemplo" class="hamburguesasMenu">
+            </div>
           </div>
         </div>
 
         <div class="col-xl-6 col-md-6 col-sm-12 opcionMenu">
           <div>
-            <h3>nombreHamburguesa</h3>
-            <p>descripcionHamburguesa</p>
-            <img src="img/foto hamburguesa ejemplo.PNG" alt="foto hamburguesa ejemplo" class="hamburguesasMenu">
+            <div class="flexPadre">
+              <h3>nombreHamburguesa</h3>
+              <p>descripcionHamburguesa</p>
+            </div>
+            <div class="fotoFlex">
+              <i class="bi bi-cart-plus cart"></i>
+              <img src="img/foto hamburguesa ejemplo.PNG" alt="foto hamburguesa ejemplo" class="hamburguesasMenu">
+            </div>
           </div>
         </div>
-
       </div>
+
 
       <div class="row">
 
         <div class="col-xl-6 col-md-6 col-sm-12 opcionMenu">
           <div>
-            <h3>nombreHamburguesa</h3>
-            <p>descripcionHamburguesa</p>
-            <img src="img/foto hamburguesa ejemplo.PNG" alt="foto hamburguesa ejemplo" class="hamburguesasMenu">
+            <div class="flexPadre">
+              <h3>nombreHamburguesa</h3>
+              <p>descripcionHamburguesa</p>
+            </div>
+            <div class="fotoFlex">
+              <i class="bi bi-cart-plus cart"></i>
+              <img src="img/foto hamburguesa ejemplo.PNG" alt="foto hamburguesa ejemplo" class="hamburguesasMenu">
+            </div>
           </div>
         </div>
 
         <div class="col-xl-6 col-md-6 col-sm-12 opcionMenu">
           <div>
-            <h3>nombreHamburguesa</h3>
-            <p>descripcionHamburguesa</p>
-            <img src="img/foto hamburguesa ejemplo.PNG" alt="foto hamburguesa ejemplo" class="hamburguesasMenu">
+            <div class="flexPadre">
+              <h3>nombreHamburguesa</h3>
+              <p>descripcionHamburguesa</p>
+            </div>
+            <div class="fotoFlex">
+              <i class="bi bi-cart-plus cart"></i>
+              <img src="img/foto hamburguesa ejemplo.PNG" alt="foto hamburguesa ejemplo" class="hamburguesasMenu">
+            </div>
           </div>
         </div>
-
       </div>
-
-      <div class="row">
-
-        <div class="col-xl-6 col-md-6 col-sm-12 opcionMenu">
-          <div>
-            <h3>nombreHamburguesa</h3>
-            <p>descripcionHamburguesa</p>
-            <img src="img/foto hamburguesa ejemplo.PNG" alt="foto hamburguesa ejemplo" class="hamburguesasMenu">
-          </div>
-        </div>
-
-        <div class="col-xl-6 col-md-6 col-sm-12 opcionMenu">
-          <div>
-            <h3>nombreHamburguesa</h3>
-            <p>descripcionHamburguesa</p>
-            <img src="img/foto hamburguesa ejemplo.PNG" alt="foto hamburguesa ejemplo" class="hamburguesasMenu">
-          </div>
-        </div>
-
-      </div>
-
-      <div class="row">
-
-        <div class="col-xl-6 col-md-6 col-sm-12 opcionMenu">
-          <div>
-            <h3>nombreHamburguesa</h3>
-            <p>descripcionHamburguesa</p>
-            <img src="img/foto hamburguesa ejemplo.PNG" alt="foto hamburguesa ejemplo" class="hamburguesasMenu">
-          </div>
-        </div>
-
-        <div class="col-xl-6 col-md-6 col-sm-12 opcionMenu">
-          <div>
-            <h3>nombreHamburguesa</h3>
-            <p>descripcionHamburguesa</p>
-            <img src="img/foto hamburguesa ejemplo.PNG" alt="foto hamburguesa ejemplo" class="hamburguesasMenu">
-          </div>
-        </div>
-
-      </div>
-
 
     </section>
 
@@ -178,11 +165,12 @@
 
     <ul class="nav justify-content-end">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="https://www.instagram.com/gorilas.tm/"
-          target="_blank"> <i class="bi bi-instagram"></i> Instagram</a>
+        <a class="nav-link active" aria-current="page" href="https://www.instagram.com/gorilas.tm/" target="_blank"> <i
+            class="bi bi-instagram"></i> Instagram</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://twitter.com/coderhouse" target="_blank"> <i class="bi bi-twitter"></i> Twitter</a>
+        <a class="nav-link" href="https://twitter.com/coderhouse" target="_blank"> <i class="bi bi-twitter"></i>
+          Twitter</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="contacto.html">Contactanos</a>
