--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="img/gorilas logo .png" type="image/x-icon">
 
-  <!-- AOS -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- SEO -->
+  <meta name="keywords"
+    content="hamburguesa, hamburguesería, smashed burguers, delivery, takeaway, restaurante, comida, gorilas">
+  <meta name="description"
+    content="GorilasTM / Delivery y takeaway de Smashed Burguers, originales y hechas con mucho amor <3 /Abrimos todos los findes, esperamos tu pedido!!!">
 
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -66,48 +69,56 @@
 
     <section>
 
-      <h1>Sobre Nosotros</h1>
-
-      <div class="sobreNosotros">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque debitis minima exercitationem,
-          expedita, ipsa repellendus harum vel distinctio veniam libero beatae repudiandae ducimus assumenda quibusdam
-          vitae quisquam tempore cumque dolorum aperiam blanditiis quaerat autem temporibus? Sunt harum nisi veritatis
-          quae nobis voluptatem quibusdam saepe ipsa autem et eveniet sit quasi enim nulla rem corrupti voluptas minus
-          sapiente fugit voluptatibus excepturi, odit cupiditate hic. Delectus id repellendus perferendis at, est ipsa
-          illum impedit placeat corrupti eveniet dolorem in officiis?</p>
+      <div class="introIndex">
+        <h1>Sobre Nosotros</h1>
       </div>
 
-      <!-- CAROUSEL -->
+      <div class="gridPadre">
 
-      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/team.PNG" class="d-block w-100 img" alt="imagen del equipo">
-          </div>
-          <div class="carousel-item">
-            <img src="img/gorilas logo .png" class="d-block w-100 img" alt="logo de la empresa">
-          </div>
-          <div class="carousel-item">
-            <img src="img/foto hamburguesa ejemplo.PNG" class="d-block w-100 img" alt="foto hamburguesa ejemplo">
-          </div>
+        <div class="sobreNosotros hijoUno">
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque debitis minima exercitationem,
+            expedita, ipsa repellendus harum vel distinctio veniam libero beatae repudiandae ducimus assumenda quibusdam
+            vitae quisquam tempore cumque dolorum aperiam blanditiis quaerat autem temporibus? Sunt harum nisi veritatis
+            quae nobis voluptatem quibusdam saepe ipsa autem et eveniet sit quasi enim nulla rem corrupti voluptas minus
+            sapiente fugit voluptatibus excepturi, odit cupiditate hic. Delectus id repellendus perferendis at, est ipsa
+            illum impedit placeat corrupti eveniet dolorem in officiis?</p>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+
+        <!-- CAROUSEL -->
+
+        <div class="hijoDos">
+
+          <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/team.PNG" class="d-block w-100 img" alt="imagen del equipo">
+              </div>
+              <div class="carousel-item">
+                <img src="img/gorilas logo .png" class="d-block w-100 img" alt="logo de la empresa">
+              </div>
+              <div class="carousel-item">
+                <img src="img/foto hamburguesa ejemplo.PNG" class="d-block w-100 img" alt="foto hamburguesa ejemplo">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+        </div>
+
+        <!-- CAROUSEL -->
+
       </div>
 
-      <!-- CAROUSEL -->
 
-      <div data-aos="zoom-out-up" class="animacionDos">
-        <p>Pasate por nuestar Redes!!!</p>
-
-      </div>
- 
     </section>
 
   </main>
@@ -116,11 +127,12 @@
 
     <ul class="nav justify-content-end">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="https://www.instagram.com/gorilas.tm/"
-          target="_blank"> <i class="bi bi-instagram"></i> Instagram</a>
+        <a class="nav-link active" aria-current="page" href="https://www.instagram.com/gorilas.tm/" target="_blank"> <i
+            class="bi bi-instagram"></i> Instagram</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://twitter.com/coderhouse" target="_blank"> <i class="bi bi-twitter"></i> Twitter</a>
+        <a class="nav-link" href="https://twitter.com/coderhouse" target="_blank"> <i class="bi bi-twitter"></i>
+          Twitter</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="contacto.html">Contactanos</a>
@@ -136,13 +148,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
-
-  <!-- AOS -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-  <script>
-    AOS.init();
-  </script>
 
 </body>
 
