--- a/carrito.html
+++ b/carrito.html
@@ -61,7 +61,7 @@
 
     <main>
 
-        <h1 class="color">Su Pedidio</h1>
+        <h1>Su Pedidio</h1>
         <br>
         <div>
             <div>
@@ -69,9 +69,9 @@
             </div>
         </div>
         <br>
-        <h2 class="color">Total = $x</h2>
+        <h2>Total = $x</h2>
         <br>
-        <h2><a href="pago.html" class="color">Confirmar</a></h2>
+        <h2> <a href="pago.html" class=>Confirmar</a> </h2>
 
 
     </main>
