--- a/contacto.html
+++ b/contacto.html
@@ -60,28 +60,31 @@
 
 
     <main>
-        <h1 class="gorilas">Gorilas</h1>
+        <div class="cuadroContacto">
+            <h1>Gorilas</h1>
 
-        <form>
-            <div class="mb-3">
-                <label for="" class="form-label color">Nombre y Apellido</label>
-                <input type="text" class="form-control">
-            </div>
+            <form>
+                <div class="mb-3">
+                    <label for="" class="form-label color">Nombre y Apellido</label>
+                    <input type="text" class="form-control">
+                </div>
 
-            <!-- FORM -->
+                <!-- FORM -->
 
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label color">Mail </label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label color">Mensaje</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Mail </label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 
-                <input type="submit">
-            </div>
+                    <input type="submit">
+                </div>
 
-        </form>
+            </form>
+
+        </div>
 
 
     </main>
