--- a/pago.html
+++ b/pago.html
@@ -62,48 +62,47 @@
   <main>
 
     <!-- PAGO -->
-
-    <form class="row g-3">
-      <div class="col-md-6">
-        <label for="inputEmail4" class="form-label">Mail</label>
-        <input type="email" class="form-control" id="inputEmail4">
-      </div>
-      <div class="col-md-6">
-        <label for="" class="form-label">Nombre y Apellido</label>
-        <input type="text" class="form-control">
-      </div>
-      <div class="col-12">
-        <label for="inputAddress" class="form-label">Direccion</label>
-        <input type="text" class="form-control" id="inputAddress" placeholder="España 2893">
-      </div>
-      <div class="col-md-6">
-        <label for="" class="form-label">Aclaraciones</label>
-        <input type="text" class="form-control" placeholder="Piso 3 - C">
-      </div>
-      <div class="col-md-4">
-        <label for="inputState" class="form-label">:)</label>
-        <select id="inputState" class="form-select">
-          <option selected>Ninguno</option>
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-        </select>
-      </div>
-      <div class="col-12">
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="gridCheck">
-          <label class="form-check-label" for="gridCheck">
-            Tocamos Timbre?
-          </label>
+    <div class="confirmarCompra">
+      <form class="row g-3">
+        <div class="col-md-6">
+          <label for="inputEmail4" class="form-label">Mail</label>
+          <input type="email" class="form-control" id="inputEmail4">
         </div>
-      </div>
-      <div class="col-12">
-        <button type="submit" class="btn btn-primary enviarPedido">Enviar el Pedido</button>
-      </div>
-    </form>
-
-
-
+        <div class="col-md-6">
+          <label for="" class="form-label">Nombre y Apellido</label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="col-6">
+          <label for="inputAddress" class="form-label">Direccion</label>
+          <input type="text" class="form-control" id="inputAddress" placeholder="España 2893">
+        </div>
+        <div class="col-md-6">
+          <label for="" class="form-label">Aclaraciones</label>
+          <input type="text" class="form-control" placeholder="Piso 3 - C">
+        </div>
+        <div class="col-md-4">
+          <label for="inputState" class="form-label">no se que pero quiero agregar esta opción</label>
+          <select id="inputState" class="form-select">
+            <option selected>Ninguno</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+          </select>
+        </div>
+        <div class="col-12">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="gridCheck">
+            <label class="form-check-label" for="gridCheck">
+              Tocamos Timbre?
+            </label>
+          </div>
+        </div>
+        <div class="col-12">
+          <button type="submit" class="btn btn-primary enviarPedido">Enviar el Pedido</button>
+        </div>
+      </form>
+    </div>
+    
   </main>
 
   <footer>
