menu, carrito y pago

--- a/carrito.html
+++ b/carrito.html
@@ -26,7 +26,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark">
 
-            <a href="index.html"><img src="img/gorilas logo .png" alt="logo empresa" class="logo"></a>
+            <a href="index.html"><img src="img/gorilas logo.png" alt="logo empresa" class="logo"></a>
 
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">Gorilas</a>
@@ -61,17 +61,62 @@
 
     <main>
 
-        <h1>Su Pedidio</h1>
-        <br>
-        <div>
-            <div>
 
+        <h1 class="intro">Su Pedidio</h1>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-12 eleccion">
+                    <div class="card shadow-lg">
+
+
+                        <div class="card-body">
+                            <p class="card'text titulo">BLACK MAMBA</p>
+                            <p class="card-text">Triple medallón de carne con cheddar x5.</p>
+                            <div class="d-flex justify-content-between align-items-center"></div>
+                            <small class="precio">$1250</small>
+                            <button type="button" class="btn btn-#f1e74d borrar"><i class="bi bi-x-lg"></i></button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 eleccion">
+                    <div class="card shadow-lg">
+
+
+                        <div class="card-body">
+                            <p class="card-text titulo">AMERICAN EAGLE</p>
+                            <p class="card-text">Doble medallón de carne con cheddar, cebolla, tomate, lechuga y salsa
+                                Mil Islas.</p>
+                            <div class="d-flex justify-content-between align-items-center"></div>
+                            <small class="precio">$1090</small>
+                            <button type="button" class="btn btn-#f1e74d borrar"><i class="bi bi-x-lg"></i></button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 eleccion">
+                    <div class="card shadow-lg">
+
+
+                        <div class="card-body">
+                            <p class="card-text titulo">CHEETAH</p>
+                            <p class="card-text">Doble medallón de carne con cheddar.</p>
+                            <div class="d-flex justify-content-between align-items-center"></div>
+                            <small class="precio">$1090</small>
+                            <button type="button" class="btn btn-#f1e74d borrar"><i class="bi bi-x-lg"></i></button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <br>
-        <h2>Total = $x</h2>
-        <br>
-        <h2> <a href="pago.html" class=>Confirmar</a> </h2>
+
+        <h2 class="intro">Total = $3430</h2>
+
+        <h2 class="intro confirmar"> <a href="pago.html" class="btn btn-one"><span>Confirmar</span></a> </h2>
+
+
+
 
 
     </main>
@@ -84,7 +129,8 @@
                     target="_blank"> <i class="bi bi-instagram"></i> Instagram</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://twitter.com/coderhouse" target="_blank"> <i class="bi bi-twitter"></i> Twitter</a>
+                <a class="nav-link" href="https://twitter.com/coderhouse" target="_blank"> <i class="bi bi-twitter"></i>
+                    Twitter</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contactanos</a>
