--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark">
 
-      <a href="index.html"><img src="img/gorilas logo .png" alt="logo empresa" class="logo"></a>
+      <a href="index.html"><img src="img/gorilas logo.png" alt="logo empresa" class="logo"></a>
 
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Gorilas</a>
@@ -63,11 +63,11 @@
 
 
 
-    <div class="introMenu">
+    <div class="intro">
       <h1>Menú</h1>
     </div>
 
-    <div class="introMenu"><p>TODAS LAS HAMBURGUESAS INCLUYEN PORCIÓN DE PAPAS FRITAS Y PUEDEN VENIR EN VERSIÓN TRIPLE, CUÁDRUPLE O QUÍNTUPLE.</p></div>
+    <div class="intro"><p>TODAS LAS HAMBURGUESAS INCLUYEN PORCIÓN DE PAPAS FRITAS Y PUEDEN VENIR EN VERSIÓN TRIPLE, CUÁDRUPLE O QUÍNTUPLE.</p></div>
 
 
     <div class="album py-5 bg-#282a29">
@@ -78,17 +78,12 @@
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
 
-          <div class="col animacion">
-            <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-                role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-                  dy=".3em">Thumbnail</text>
-              </svg>
+          <div class="col">
+            <div class="card shadow-lg">
+              <img src="img/blackmambaH.jpg" alt="black mamba imagen">
 
               <div class="card-body">
-                <p class="card'text">BLACK MAMBA</p>
+                <p class="card'text titulo">BLACK MAMBA</p>
                 <p class="card-text">Triple medallón de carne con cheddar x5.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -103,16 +98,11 @@
 
 
           <div class="col">
-            <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-                role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-                  dy=".3em">Thumbnail</text>
-              </svg>
+            <div class="card shadow-lg">
+              <img src="img/goatH.jpg" alt="g.o.a.t. imagen">
 
               <div class="card-body">
-                <p class="card'text">G.O.A.T</p>
+                <p class="card'text titulo">G.O.A.T</p>
                 <p class="card-text">Doble medallón de carne con cheddar x3, aros de cebolla, bacon y extra barbacoa.
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -133,16 +123,11 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
 
           <div class="col">
-            <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-                role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-                  dy=".3em">Thumbnail</text>
-              </svg>
+            <div class="card shadow-lg">
+              <img src="img/cheetahH.jpg" alt="cheetah imagen">
 
               <div class="card-body">
-                <p class="card-text">CHEETAH</p>
+                <p class="card-text titulo">CHEETAH</p>
                 <p class="card-text">Doble medallón de carne con cheddar.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -156,16 +141,11 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-                role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-                  dy=".3em">Thumbnail</text>
-              </svg>
+            <div class="card shadow-lg">
+              <img src="img/gorilaH.jpg" alt="gorila imagen">
 
               <div class="card-body">
-                <p class="card-text">GORILA</p>
+                <p class="card-text titulo">GORILA</p>
                 <p class="card-text">Doble medallón de carne con cheddar, cebolla crispy, bacon y salsa Mil Islas.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -179,16 +159,11 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-                role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-                  dy=".3em">Thumbnail</text>
-              </svg>
+            <div class="card shadow-lg">
+              <img src="img/caimanH.jpg" alt="caiman imagen">
 
               <div class="card-body">
-                <p class="card-text">CAIMAN</p>
+                <p class="card-text titulo">CAIMAN</p>
                 <p class="card-text">Doble medallón de carne con cheddar, cebolla caramelizada y mallonesa especial.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -202,16 +177,11 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-                role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-                  dy=".3em">Thumbnail</text>
-              </svg>
+            <div class="card shadow-lg">
+              <img src="img/boaH.jpg" alt="boa imagen">
 
               <div class="card-body">
-                <p class="card-text">BOA</p>
+                <p class="card-text titulo">BOA</p>
                 <p class="card-text">Doble medallón de carne con cheddar, cebolla caramelizada, bacon y barbacoa.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -225,16 +195,11 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-                role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-                  dy=".3em">Thumbnail</text>
-              </svg>
+            <div class="card shadow-lg">
+              <img src="img/wolfH.jpg" alt=" wolf imagen">
 
               <div class="card-body">
-                <p class="card-text">WOLF</p>
+                <p class="card-text titulo">WOLF</p>
                 <p class="card-text">Doble medallón de carne con cheddar y salsa cuarto de libra.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -248,16 +213,11 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-                role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-                  dy=".3em">Thumbnail</text>
-              </svg>
+            <div class="card shadow-lg">
+              <img src="img/americanH.jpg" alt="american eagle imagen">
 
               <div class="card-body">
-                <p class="card-text">AMERICAN EAGLE</p>
+                <p class="card-text titulo">AMERICAN EAGLE</p>
                 <p class="card-text">Doble medallón de carne con cheddar, cebolla, tomate, lechuga y salsa Mil Islas.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -275,7 +235,23 @@
         </div>
 
         <h2 class="color">Simples</h2>
-        <p class="simple">Cualquier doble puede venir en versión simple - $950</p>
+  
+        <div class="col">
+          <div class="card shadow-lg">
+            
+
+            <div class="card-body">
+              <p class="card-text">Cualquier doble puede venir en versión simple</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-outline-secondary"> <i class="bi bi-cart-plus cart"></i> </button>
+                  <button type="button" class="btn btn-outline-secondary">Extras</button>
+                </div>
+                <small>$950</small>
+              </div>
+            </div>
+          </div>
+        </div>
 
         
 
