--- a/pago.html
+++ b/pago.html
@@ -28,7 +28,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark">
 
-      <a href="index.html"><img src="img/gorilas logo .png" alt="logo empresa" class="logo"></a>
+      <a href="index.html"><img src="img/gorilas logo.png" alt="logo empresa" class="logo"></a>
 
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Gorilas</a>
@@ -103,6 +103,8 @@
       </form>
     </div>
     
+    <h2 class="intro confirmar"> <a href="carrito.html" class="btn btn-one"><span>CANCELAR</span></a> </h2>
+
   </main>
 
   <footer>
