--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark">
 
-      <a href="index.html"><img src="img/gorilas logo .png" alt="logo empresa" class="logo"></a>
+      <a href="index.html"><img src="img/gorilas logo.png" alt="logo empresa" class="logo"></a>
 
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Gorilas</a>
@@ -67,7 +67,7 @@
 
   <main>
 
-    <div class="introIndex">
+    <div class="intro">
       <h1>Sobre Nosotros</h1>
     </div>
 
@@ -85,7 +85,7 @@
             illum impedit placeat corrupti eveniet dolorem in officiis?</p>
         </div>
 
-        <img src="img/gorilas logo .png" alt="logo empresa" class="col-sm-12 col-md-6 col-lg-6 img">
+        <img src="img/gorilas logo.png" alt="logo empresa" class="logo col-sm-12 col-md-6 col-lg-6">
         
         
       </div>
