--- a/contacto.html
+++ b/contacto.html
@@ -63,7 +63,7 @@
 
         <!-- FORM -->
 
-        <form class="p-4 p-md-5 border rounded-3 bg-#0f1010">
+        <form class="p-4 p-md-5 border rounded-3 bg-#0f1010 shadow-lg">
             <div class="cuadroContacto">
                 <h1>Gorilas</h1>
     
