--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
 
         <div class="logo col-sm-12 col-md-6 col-lg-6">
-          <img src="img/gorilas logo.PNG" alt="logo empresa" class="fotoLogo">
+          <img src="img/teamgorilas.jpg" alt="logo empresa" class="fotoLogo">
         </div>
 
         
